--- a/cases/integration/v1/test_batch_request.yaml
+++ b/cases/integration/v1/test_batch_request.yaml
@@ -238,3 +238,70 @@ cases:
         - [2,"a",13,100,4.0,7.0,1590738996000,"2020-05-07","e"]
         - [4,"a",14,100,4.1,7.1,1590738996000,"2020-05-07","e"]
         - [7,"a",15,100,4.2,7.2,1590738996000,"2020-05-07","e"]
+  - id: 6
+    desc: batch request with one common window and one non-common window
+    inputs:
+      -
+        columns: ["id int","k1 bigint","k2 bigint","k3 timestamp", "k4 timestamp",
+                  "c1 double","c2 double","c3 double","c4 double","c5 double","c6 double"]
+        indexs: ["index1:k1:k3", "index2:k2:k4"]
+        repeat: 10
+        rows:
+          - [1,1,2,1590738990000,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+          - [3,1,2,1590738990000,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+          - [5,1,2,1590738990000,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+          - [6,1,2,1590738990000,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+    batch_request:
+      common_column_indices: [1,3,5,6,7]
+      columns : ["id int","k1 bigint","k2 bigint","k3 timestamp", "k4 timestamp",
+                 "c1 double","c2 double","c3 double","c4 double","c5 double","c6 double"]
+      rows:
+        - [2,1,2,1590738991000,1590738991000,1.0,1.0,1.0,1.0,1.0,1.0]
+        - [4,1,2,1590738991000,1590738991000,1.0,1.0,1.0,1.0,1.0,1.0]
+        - [7,1,2,1590738991000,1590738991000,1.0,1.0,1.0,1.0,1.0,1.0]
+    sql: |
+      SELECT {0}.id, sum(c1) over w1 as m1, sum(c2) over w1 as m2, sum(c3) over w1 as m3,
+             sum(c4) over w2 as m4, sum(c5) over w2 as m5, sum(c6) over w2 as m6
+      FROM {0}
+      WINDOW w1 AS (PARTITION BY {0}.k1 ORDER BY {0}.k3 ROWS_RANGE BETWEEN 20s PRECEDING AND CURRENT ROW),
+             w2 AS (PARTITION BY {0}.k2 ORDER BY {0}.k4 ROWS_RANGE BETWEEN 20s PRECEDING AND CURRENT ROW);
+    expect:
+      success: true
+      order: id
+      columns: [ "id int","m1 double","m2 double","m3 double","m4 double","m5 double","m6 double"]
+      common_column_indices: [1,2,3]
+      rows:
+        - [2, 41.0, 41.0, 41.0, 41.0, 41.0, 41.0]
+        - [4, 41.0, 41.0, 41.0, 41.0, 41.0, 41.0]
+        - [7, 41.0, 41.0, 41.0, 41.0, 41.0, 41.0]
+
+  - id: 7
+    desc: batch request with common window and common and non-common aggregations, window is small
+    inputs:
+      -
+        columns: ["id int","k1 bigint","k2 timestamp",
+                  "c1 double","c2 double","c3 double",
+                  "c4 double","c5 double","c6 double"]
+        indexs: ["index1:k1:k2",]
+        repeat: 10
+        rows:
+          - [1,1,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
+    batch_request:
+      common_column_indices: [1,2,3,5,7]
+      repeat: 1
+      columns : ["id int","k1 bigint","k2 timestamp",
+                 "c1 double","c2 double","c3 double",
+                 "c4 double","c5 double","c6 double"]
+      rows:
+        - [2,1,1590738991000,1.0,1.0,1.0,1.0,1.0,1.0]
+    sql: |
+      SELECT {0}.id, sum(c1) over w1 as m1, sum(c2) over w1 as m2, sum(c3) over w1 as m3,
+             sum(c4) over w1 as m4, sum(c5) over w1 as m5, sum(c6) over w1 as m6
+      FROM {0}
+      WINDOW w1 AS (PARTITION BY {0}.k1 ORDER BY {0}.k2 ROWS_RANGE BETWEEN 20s PRECEDING AND CURRENT ROW);
+    expect:
+      common_column_indices: [1,3,5]
+      rows:
+        - [2, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0]
+        - [4, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0]
+        - [7, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0]
