--- a/cases/integration/v1/test_batch_request.yaml
+++ b/cases/integration/v1/test_batch_request.yaml
@@ -288,19 +288,23 @@ cases:
           - [1,1,1590738990000,1.0,1.0,1.0,1.0,1.0,1.0]
     batch_request:
       common_column_indices: [1,2,3,5,7]
-      repeat: 1
       columns : ["id int","k1 bigint","k2 timestamp",
                  "c1 double","c2 double","c3 double",
                  "c4 double","c5 double","c6 double"]
       rows:
         - [2,1,1590738991000,1.0,1.0,1.0,1.0,1.0,1.0]
+        - [4,1,1590738991000,1.0,1.0,1.0,1.0,1.0,1.0]
+        - [7,1,1590738991000,1.0,1.0,1.0,1.0,1.0,1.0]
     sql: |
       SELECT {0}.id, sum(c1) over w1 as m1, sum(c2) over w1 as m2, sum(c3) over w1 as m3,
              sum(c4) over w1 as m4, sum(c5) over w1 as m5, sum(c6) over w1 as m6
       FROM {0}
       WINDOW w1 AS (PARTITION BY {0}.k1 ORDER BY {0}.k2 ROWS_RANGE BETWEEN 20s PRECEDING AND CURRENT ROW);
     expect:
+      success: true
+      order: id
       common_column_indices: [1,3,5]
+      columns: [ "id int","m1 double","m2 double","m3 double","m4 double","m5 double","m6 double"]
       rows:
         - [2, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0]
         - [4, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0]
