--- a/cases/integration/v1/function/test_udaf_function.yaml
+++ b/cases/integration/v1/function/test_udaf_function.yaml
@@ -14,16 +14,16 @@ cases:
           - [3,"aa",3,3,32,1.3,2.3,1590738992000,"2020-05-02","b",true]
           - [4,"aa",NULL,NULL,NULL,NULL,NULL,1590738993000,NULL,NULL,NULL]
     sql: |
-      SELECT id, c1, max(c2) OVER w1 as m2,max(c3) OVER w1 as m3,max(c4) OVER w1 as m4,max(c5) OVER w1 as m5,max(c6) OVER w1 as m6,max(c7) OVER w1 as m7,max(c8) OVER w1 as m8,max(c9) OVER w1 as m9,max(c10) OVER w1 as m10 FROM {0} WINDOW
+      SELECT id, c1, max(c2) OVER w1 as m2,max(c3) OVER w1 as m3,max(c4) OVER w1 as m4,max(c5) OVER w1 as m5,max(c6) OVER w1 as m6,max(c7) OVER w1 as m7,max(c8) OVER w1 as m8,max(c9) OVER w1 as m9 FROM {0} WINDOW
       w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
       order: id
-      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float","m6 double","m7 timestamp","m8 date","m9 string","m10 bool"]
+      columns: ["id int","c1 string","m2 smallint","m3 int","m4 bigint","m5 float","m6 double","m7 timestamp","m8 date","m9 string"]
       rows:
-        - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a",true]
-        - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c",true]
-        - [3,"aa",4,4,33,1.4,2.4,1590738992000,"2020-05-03","c",true]
-        - [4,"aa",4,4,33,1.4,2.4,1590738993000,"2020-05-03","c",true]
+        - [1,"aa",1,1,30,1.1,2.1,1590738990000,"2020-05-01","a"]
+        - [2,"aa",4,4,33,1.4,2.4,1590738991000,"2020-05-03","c"]
+        - [3,"aa",4,4,33,1.4,2.4,1590738992000,"2020-05-03","c"]
+        - [4,"aa",4,4,33,1.4,2.4,1590738993000,"2020-05-03","c"]
   -
     id: 1
     desc: min
