--- a/src/sdk/CMakeLists.txt
+++ b/src/sdk/CMakeLists.txt
@@ -26,6 +26,9 @@ target_link_libraries(mini_cluster_bm benchmark_main benchmark gtest ${BIN_LIBS}
 add_executable(mini_cluster_bm_request_batch mini_cluster_bm_request_batch.cc mini_cluster_bm.cc)
 target_link_libraries(mini_cluster_bm_request_batch benchmark_main benchmark gtest ${BIN_LIBS} ${FESQL_CASE_LIBS})
 
+add_executable(mini_cluster_bm_request mini_cluster_bm_request.cc mini_cluster_bm.cc)
+target_link_libraries(mini_cluster_bm_request benchmark_main benchmark gtest ${BIN_LIBS} ${FESQL_CASE_LIBS})
+
 if(SQL_PYSDK_ENABLE)
 	find_package(Python3 COMPONENTS Interpreter Development)
 	set_property(SOURCE sql_router_sdk.i PROPERTY CPLUSPLUS ON)
