--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,8 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     add_definitions(-Wno-c++17-extensions)
     add_definitions(-Wno-defaulted-function-deleted)
     add_definitions(-Wno-pessimizing-move)
+    add_definitions(-Wno-unused-value)
+    add_definitions(-Wno-\#pragma-messages)
 endif ()
 add_definitions(-DHAVE_STDBOOL_H=1)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
