--- a/cases/integration/v1/test_window_row_range.yaml
+++ b/cases/integration/v1/test_window_row_range.yaml
@@ -661,6 +661,16 @@ cases:
           - [ "aa",7, 1.0, 1590738999000 ]
           - [ "aa",8, 1.0, 1590739001000 ]
           - [ "aa",9, 1.0, 1590739002000 ]
+    request_plan: |
+      PROJECT(type=Aggregation)
+        REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -3000, -1000, maxsize=2), index_keys=(auto_t0.c1))
+          DATA_PROVIDER(request=auto_t0)
+          DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
+
+    batch_plan: |
+      PROJECT(type=WindowAggregation)
+        +-WINDOW(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -3000, -1000, maxsize=2))
+        DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
     sql: |
       SELECT c1, c3, c7,
       sum(c4) OVER w1 as w1_c4_sum
@@ -701,6 +711,15 @@ cases:
       FROM {0} WINDOW
       w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 3s PRECEDING AND CURRENT ROW MAXSIZE 4),
       w2 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND CURRENT ROW MAXSIZE 4);
+    request_plan: |
+      PROJECT(type=Aggregation)
+        REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -3000, 0, maxsize=4), index_keys=(auto_t0.c1))
+          DATA_PROVIDER(request=auto_t0)
+          DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
+    batch_plan: |
+      PROJECT(type=WindowAggregation)
+        +-WINDOW(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -3000, 0, maxsize=4))
+        DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
     expect:
       order: c3
       columns: [ "c1 string", "c3 int", "c7 timestamp",  "w1_c4_sum double", "w2_c4_sum double" ]
@@ -737,6 +756,18 @@ cases:
       FROM {0} WINDOW
       w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 3s PRECEDING AND CURRENT ROW),
       w2 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 3s PRECEDING AND CURRENT ROW MAXSIZE 2);
+    request_plan: |
+      SIMPLE_PROJECT(sources=(c1, c3, c7, w1_c4_sum, w2_c4_sum))
+        REQUEST_JOIN(type=kJoinTypeConcat)
+          PROJECT(type=Aggregation)
+            REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -3000, 0), index_keys=(auto_t0.c1))
+              DATA_PROVIDER(request=auto_t0)
+              DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
+          PROJECT(type=Aggregation)
+            REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -3000, 0, maxsize=2), index_keys=(auto_t0.c1))
+              DATA_PROVIDER(request=auto_t0)
+              DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
+
     expect:
       order: c3
       columns: [ "c1 string", "c3 int", "c7 timestamp",  "w1_c4_sum double", "w2_c4_sum double" ]
@@ -752,7 +783,6 @@ cases:
         - [ "aa", 9, 1590739002000, 3.0, 2.0 ]
   - id: 27
     desc: ROWS and ROWS_RANGE Current History Window with MaxSize Merge
-    tags: ["TODO", "@chenjing"]
     inputs:
       - columns: [ "c1 string","c3 int","c4 double","c7 timestamp" ]
         indexs: [ "index1:c1:c7" ]
@@ -771,8 +801,17 @@ cases:
       sum(c4) OVER w1 as w1_c4_sum,
       sum(c4) OVER w2 as w2_c4_sum
       FROM {0} WINDOW
-      w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 4 PRECEDING AND CURRENT ROW),
-      w2 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 10s PRECEDING AND CURRENT ROW MAXSIZE 5);
+      w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 3 PRECEDING AND CURRENT ROW),
+      w2 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 6s PRECEDING AND CURRENT ROW MAXSIZE 5);
+    request_plan: |
+      PROJECT(type=Aggregation)
+        REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -6000, 0, maxsize=5), rows=(auto_t0.c7, -3, 0), index_keys=(auto_t0.c1))
+          DATA_PROVIDER(request=auto_t0)
+          DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
+    batch_plan: |
+      PROJECT(type=WindowAggregation)
+        +-WINDOW(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -6000, 0, maxsize=5), rows=(auto_t0.c7, -3, 0))
+        DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
     expect:
       order: c3
       columns: [ "c1 string", "c3 int", "c7 timestamp",  "w1_c4_sum double", "w2_c4_sum double" ]
@@ -783,6 +822,6 @@ cases:
         - [ "aa", 4, 1590738993000, 4.0, 4.0 ]
         - [ "aa", 5, 1590738994000, 4.0, 5.0 ]
         - [ "aa", 6, 1590738995000, 4.0, 5.0 ]
-        - [ "aa", 7, 1590738999000, 1.0, 1.0 ]
-        - [ "aa", 8, 1590739001000, 2.0, 2.0 ]
-        - [ "aa", 9, 1590739002000, 3.0, 3.0 ]
+        - [ "aa", 7, 1590738999000, 4.0, 4.0 ]
+        - [ "aa", 8, 1590739001000, 4.0, 3.0 ]
+        - [ "aa", 9, 1590739002000, 4.0, 3.0 ]
