--- a/cases/integration/v1/window/test_window_row_range.yaml
+++ b/cases/integration/v1/window/test_window_row_range.yaml
@@ -437,7 +437,7 @@ cases:
 
   - id: 16-2
     desc: 多个window指定不同的ts, 数据时间乱序插入，request模式预期
-    mode: offline-unsupport
+    mode: batch-unsupport
     inputs:
       - columns: [ "id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date" ]
         indexs: [ "index1:c3:c7", "index2:c3:c4" ]
