--- a/cases/integration/v1/expression/test_arithmetic.yaml
+++ b/cases/integration/v1/expression/test_arithmetic.yaml
@@ -410,13 +410,14 @@ cases:
         indexs: ["index1:id:c7"]
         rows:
           - [1,"aa",30,-30,30,30.0,30.0,1590738989000,"2020-05-01",true]
-          - [1,"aa",30,-30,30,30.0,30.0,1590738989000,"2020-05-01",false]
-    sql: select - {0}.c2 as b2,- {0}.c3 as b3,- {0}.c4 as b4,- {0}.c5 as b5,- {0}.c6 as b6,- {0}.c9 as b9 from {0};
+          - [2,"aa",30,-30,30,30.0,30.0,1590738989000,"2020-05-01",false]
+    sql: select id, - {0}.c2 as b2,- {0}.c3 as b3,- {0}.c4 as b4,- {0}.c5 as b5,- {0}.c6 as b6,- {0}.c9 as b9 from {0};
     expect:
-      columns: ["b2 smallint","b3 int","b4 bigint","b5 float","b6 double","b9 bool"]
+      order: id
+      columns: ["id bigint", "b2 smallint","b3 int","b4 bigint","b5 float","b6 double","b9 bool"]
       rows:
-        - [-30,30,-30,-30,-30,false]
-        - [-30,30,-30,-30,-30,false]
+        - [1,-30,30,-30,-30,-30,true]
+        - [2,-30,30,-30,-30,-30,false]
   - id: 16
     desc: "-_其他类型_错误"
     level: 5
