--- a/cases/integration/v1/join/test_lastjoin.yaml
+++ b/cases/integration/v1/join/test_lastjoin.yaml
@@ -571,7 +571,7 @@ cases:
           - [4,"bb",21,33,1.4,2.1,1606766400000,"2020-05-01"]
           - [5,"ee",21,34,1.5,2.2,1606766401000,"2020-05-02"]
     sql: |
-      select id,{0}.c1,{0}.c3,{1}.c3,{2}.c4
+      select {0}.id,{0}.c1,{0}.c3,{1}.c3,{2}.c4
       from {0}
       last join {1} ORDER BY {1}.c7 on {0}.c1={1}.c1
       last join {2} ORDER BY {2}.c7 on {1}.c3={2}.c3
@@ -622,7 +622,7 @@ cases:
     # @baoxinqi, select id,{0}.c1,{1}.c3 from {0} last join {1} 这个地方理论上应该有column resolved error, 不知道要哪一个id
     sql: |
       select
-      id,t1.c1,t1.c3,{2}.c4
+      t1.id,t1.c1,t1.c3,{2}.c4
       from (
       select {0}.id,{0}.c1,{1}.c3
       from {0}
