--- a/src/sdk/java/fesql-auto-test-java/src/main/resources/fesql.properties
+++ b/src/sdk/java/fesql-auto-test-java/src/main/resources/fesql.properties
@@ -13,6 +13,7 @@ qa_init_version_env=false
 standalone_zk_cluster=127.0.0.1:6181
 #配置集群的zk根路径, 和集群启动配置中的zk_root_path保持一致
 standalone_zk_root_path=/onebox
+standalone_versions=2021-02-06
 
 #配置zk地址, 和集群启动配置中的zk_cluster保持一致
 cluster_zk_cluster=127.0.0.1:6181
