--- a/src/sdk/java/fesql-auto-test-java/pom.xml
+++ b/src/sdk/java/fesql-auto-test-java/pom.xml
@@ -184,6 +184,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20.1</version>
                 <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
                     <reuseForks>false</reuseForks>
                     <forkCount>1</forkCount>
                     <suiteXmlFiles>
