--- a/cases/integration/v1/join/test_lastjoin.yaml
+++ b/cases/integration/v1/join/test_lastjoin.yaml
@@ -837,43 +837,43 @@ cases:
       ;
     expect:
       success: false
-  - id: 15
-    desc: lastjoin-重名,指定不同的表名-在线场景
-    tags: ["@zhaowei", "离线场景预期不一样,后面和可能需要针对离线在线配置不同预期"]
-    mode: offline-unsupport
-    inputs:
-      -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"aa",21,31,1.2,2.2,1590738990001,"2020-05-02"]
-          - [3,"aa",22,32,1.3,2.3,1590738990002,"2020-05-03"]
-          - [4,"bb",23,33,1.4,2.4,1590738990003,"2020-05-04"]
-          - [5,"bb",24,34,1.5,2.5,1590738990004,"2020-05-05"]
-      -
-        columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"aa",20,31,1.1,2.1,null,"2020-05-01"]
-          - [3,"aa",20,32,1.1,2.1,1590738990002,"2020-05-01"]
-          - [4,"bb",20,33,1.1,2.1,1590738990003,"2020-05-01"]
-          - [5,"bb",21,34,1.2,2.2,1590738990004,"2020-05-02"]
-    sql: |
-      select {0}.id,{0}.c1,{0}.c3,{1}.c3,{1}.c4
-      from {0}
-      last join {1} ORDER BY {1}.c7 on {0}.c1={1}.c1
-      ;
-    expect:
-      order: id
-      columns: ["id int","c1 string","c3 int","c3 int","c4 bigint"]
-      rows:
-        - [1,"aa",20,20,31]
-        - [2,"aa",21,20,31]
-        - [3,"aa",22,20,31]
-        - [4,"bb",23,21,34]
-        - [5,"bb",24,21,34]
+#  - id: 15
+#    desc: lastjoin-重名,指定不同的表名-在线场景
+#    tags: ["@zhaowei", "离线场景预期不一样,后面和可能需要针对离线在线配置不同预期"]
+#    mode: offline-unsupport
+#    inputs:
+#      -
+#        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+#        indexs: ["index1:c1:c7"]
+#        rows:
+#          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+#          - [2,"aa",21,31,1.2,2.2,1590738990001,"2020-05-02"]
+#          - [3,"aa",22,32,1.3,2.3,1590738990002,"2020-05-03"]
+#          - [4,"bb",23,33,1.4,2.4,1590738990003,"2020-05-04"]
+#          - [5,"bb",24,34,1.5,2.5,1590738990004,"2020-05-05"]
+#      -
+#        columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+#        indexs: ["index1:c1:c7"]
+#        rows:
+#          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+#          - [2,"aa",20,31,1.1,2.1,null,"2020-05-01"]
+#          - [3,"aa",20,32,1.1,2.1,1590738990002,"2020-05-01"]
+#          - [4,"bb",20,33,1.1,2.1,1590738990003,"2020-05-01"]
+#          - [5,"bb",21,34,1.2,2.2,1590738990004,"2020-05-02"]
+#    sql: |
+#      select {0}.id,{0}.c1,{0}.c3,{1}.c3,{1}.c4
+#      from {0}
+#      last join {1} ORDER BY {1}.c7 on {0}.c1={1}.c1
+#      ;
+#    expect:
+#      order: id
+#      columns: ["id int","c1 string","c3 int","c3 int","c4 bigint"]
+#      rows:
+#        - [1,"aa",20,20,31]
+#        - [2,"aa",21,20,31]
+#        - [3,"aa",22,20,31]
+#        - [4,"bb",23,21,34]
+#        - [5,"bb",24,21,34]
 
   - id: 16
     desc: 两个子查询lastjoin，拼接条件不是主表的索引
