--- a/cases/integration/v1/join/test_lastjoin.yaml
+++ b/cases/integration/v1/join/test_lastjoin.yaml
@@ -24,7 +24,7 @@ cases:
     dataProvider:
       - ["ROWS","ROWS_RANGE"]
     sql: |
-      select id,{0}.c1,{0}.c3,{1}.c4,
+      select {0}.id,{0}.c1,{0}.c3,{1}.c4,
       sum({1}.c4) OVER w1 as w1_c4_sum
       from {0}
       last join {1} ORDER BY {1}.c7 on {0}.c1={1}.c1
@@ -342,7 +342,7 @@ cases:
           - [4,"bb",20,33,1.1,2.1,1590738990003,"2020-05-01"]
           - [5,"bb",21,34,1.2,2.2,1590738990004,"2020-05-02"]
     sql: |
-      select id,{0}.c1,{0}.c3,{1}.c4
+      select {0}.id,{0}.c1,{0}.c3,{1}.c4
       from {0}
       last join {1} ORDER BY {1}.c7 on {0}.c1={1}.c1
       ;
@@ -395,7 +395,7 @@ cases:
           - [4,"ee",20,33,1.1,2.4,1607011200000,"2020-05-01"]
           - [5,"ee",21,34,1.2,2.5,1606752000000,"2020-05-02"]
     sql: |
-      select id,{0}.c1,{0}.c3,{1}.c4,{2}.c5,{3}.c6
+      select {0}.id,{0}.c1,{0}.c3,{1}.c4,{2}.c5,{3}.c6
       from {0}
       last join {1} ORDER BY {1}.c7 on {0}.c1={1}.c1
       last join {2} ORDER BY {2}.c7 on {0}.c1={2}.c1
@@ -587,10 +587,7 @@ cases:
         - [5,"ee",24,24,null]
   - id: 11
     desc: (t1 join t2) join t3
-    mode: batch-request-unsupport, offline-unsupport
-    tags: [ "@chendihao, offline unsupport",
-            "@baoxinqi, batch-request-unsupport",
-           "batch request公共列设置为偶数列时候生成的物理计划有问题 --gtest_filter=EngineTestLastJoin/EngineTest.test_cluster_batch_request_engine/*"]
+    mode: offline-unsupport
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -619,7 +616,6 @@ cases:
           - [3,"bb",null,32,1.3,2.1,1606762800000,"2020-05-01"]
           - [4,"bb",21,33,1.4,2.1,1606766400000,"2020-05-01"]
           - [5,"ee",21,34,1.5,2.2,1606766401000,"2020-05-02"]
-    # @baoxinqi, select id,{0}.c1,{1}.c3 from {0} last join {1} 这个地方理论上应该有column resolved error, 不知道要哪一个id
     sql: |
       select
       t1.id,t1.c1,t1.c3,{2}.c4
@@ -1069,12 +1065,12 @@ cases:
     dataProvider:
       - ["ROWS","ROWS_RANGE"]
     sql: |
-      select id,{0}.c1,{0}.c3,{1}.c4,
+      select {0}.id,{0}.c1,{0}.c3,{1}.c4,
       sum({1}.c4) OVER w1 as w1_c4_sum
       from {0}
       last join {1} ORDER BY {1}.c7 on {0}.c1={1}.c1
       WINDOW
-      w1 AS (PARTITION BY c1 ORDER BY c7 d[0] BETWEEN 1 PRECEDING AND CURRENT ROW)
+      w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 d[0] BETWEEN 1 PRECEDING AND CURRENT ROW)
       ;
     expect:
       order: id
