--- a/cases/integration/v1/join/test_lastjoin.yaml
+++ b/cases/integration/v1/join/test_lastjoin.yaml
@@ -1,4 +1,5 @@
 db: test_zw
+debugs: []
 cases:
   - id: 0
     desc: lastjoin+窗口
@@ -414,7 +415,7 @@ cases:
   - id: 9-1
     desc: lastjoin三张表-5个window, rtidb模式不支持
     mode: offline-unsupport
-    tags: ["边界外", "@zhaowei", "后面需要支持多张表lastjoin后作window"]
+    tags: ["TODO","边界外", "@zhaowei", "后面需要支持多张表lastjoin后作window"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
